# dis22-2023

./: .gitignore  README.md  dataset_QUERY_NO_EXAMPLE_ALL_ATTRIBUTES.csv  dataset_QUERY_NO_EXAMPLE_ALL_ATTRIBUTES.jsonl  dataset_QUERY_NO_EXAMPLE_NO_AGE.csv  dataset_QUERY_NO_EXAMPLE_NO_AGE.jsonl  dataset_QUERY_NO_EXAMPLE_NO_ATTRIBUTES.csv  dataset_QUERY_NO_EXAMPLE_NO_ATTRIBUTES.jsonl  dataset_QUERY_NO_EXAMPLE_NO_COMPLEXITY.csv  dataset_QUERY_NO_EXAMPLE_NO_COMPLEXITY.jsonl  dataset_QUERY_NO_EXAMPLE_NO_GENDER.csv  dataset_QUERY_NO_EXAMPLE_NO_GENDER.jsonl  dataset_QUERY_NO_EXAMPLE_NO_PROFESSION.csv  dataset_QUERY_NO_EXAMPLE_NO_PROFESSION.jsonl  dataset_QUERY_NO_EXAMPLE_NO_RESIDENCE.csv  dataset_QUERY_NO_EXAMPLE_NO_RESIDENCE.jsonl  main.ipynb  nilsübertreibt.ipynb
QueryGPT/: README.md  pyproject.toml
QueryGPT/querygpt/: model.py  utils.py
QueryGPT/querygpt/personas/: edith.json  john.json  karen.json  markus.json
QueryGPT/querygpt/queries/: QUERY  QUERY_EXAMPLE  QUERY_NO_EXAMPLE  QUERY_NO_EXAMPLE_NO_AGE  QUERY_NO_EXAMPLE_NO_ATTRIBUTES  QUERY_NO_EXAMPLE_NO_COMPLEXITY  QUERY_NO_EXAMPLE_NO_GENDER  QUERY_NO_EXAMPLE_NO_PROFESSION  QUERY_NO_EXAMPLE_NO_RESIDENCE
notebooks/: 4_personas_topic_11-15.csv  4_personas_topic_16-20.csv  4_personas_topic_21-25.csv  4_personas_topic_26-30.csv  4_personas_topic_31-35.csv  4_personas_topic_36-40.csv  4_personas_topic_41-45.csv  4_personas_topic_46-49.csv  4_personas_topic_6-10.csv  4_personas_topics_1-50.csv  5topic.csv  IR_Analyse.ipynb  core_nist.json  edith_9.csv  edith_ka.csv  ir_comp.ipynb  ir_prep_analysis_colab.ipynb  main.ipynb  (+4 more)
(+5 files in other folders)
