[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querygpt"
description = 'A toolset for GPT Query generation/analysis'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
version = "0.0.1"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []